# sway-monocle-layout

./: .gitignore  Cargo.toml  README.md  build.sh
src/: config.rs  events.rs  focus_back.rs  ipc.rs  main.rs  pid.rs  policy.rs  snapshot.rs  tree.rs
