[package]
name = "sway-monocle-layout"
version = "2.2.0"
edition = "2021"
description = "A monocle layout for Sway"
authors = ["Arsen Zahray"]
license = "MIT"
repository = "https://github.com/menkaur/sway-monocle-layout.git"
keywords = ["sway", "wayland", "tiling", "layout"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "signal", "macros"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true

